# book_club

./: .gitignore  Dockerfile  README.md  alembic.ini  celery.logs  docker-compose.yml  entrypoint.sh  existing_users.txt  init.sql  output.json  pyproject.toml  test_books_to_create.json
app/: celery_app.py  config.py  main.py  tasks.py
app/api/v1/: auth.py  books.py  chat.py  club.py  club_book.py  club_user.py  recommendation.py  user_book.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: book.py  chat.py  club.py  club_book.py  club_user.py  user.py  user_book.py
app/schemas/: book.py  chat.py  club.py  club_book.py  club_user.py  recommendation.py  user.py  user_book.py
migrations/: env.py
migrations/versions/: 2d00d0b69efe_add_chat_and_chatmessage_tables.py  2d669d951e9f_updated_user_schema_and_model.py  2da0dcb82b7d_add_book_club_models.py  8139cd53004f_create_user_table.py  95474e6fd707_updated_user_schema_and_model.py  a3da5262bf95_initial.py  b10f74e8d1dc_add_embedding_to_book.py  deaab5d2ef4f_add_role_to_user.py
tests/: conftest.py  test_auth.py  test_book.py  test_chat.py  test_club.py  test_club_book.py  test_club_user.py  test_entities_to_create.json  test_tasks.py  test_userbook.py
